2015-04-15  Paul Kehrer <paul.l.kehrer@gmail.com>

	* OpenSSL/crypto.py, OpenSSL/test/test_crypto.py: Switch to utf8string
	  mask by default. OpenSSL formerly defaulted to a T61String if there
	  were UTF-8 characters present.  This was changed to default to
	  UTF8String in the config around 2005, but the actual code didn't
	  change it until late last year. This will default us to the setting
	  that actually works. To revert this you can call
	  crypto._lib.ASN1_STRING_set_default_mask_asc(b"default")

2015-04-14  Hynek Schlawack  <hs@ox.cx>

	* Release 0.15.1

2015-04-14  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* OpenSSL/SSL.py, OpenSSL/test/test_ssl.py: Fix a regression
	  present in 0.15, where when an error occurs and no errno() is set,
	  a KeyError is raised.  This happens, for example, if
	  Connection.shutdown() is called when the underlying transport has
	  gone away.

2011-09-02  Hynek Schlawack  <hs@ox.cx>

	* Release 0.15

2015-04-12  Jean-Paul Calderone  <exarkun@twistedmatrix.com>

	* OpenSSL/rand.py, OpenSSL/SSL.py: APIs which previously accepted
	  filenames only as bytes now accept them as either bytes or
	  unicode (and respect sys.getfilesystemencoding()).

2015-03-23  Jean-Paul Calderone  <exarkun@twistedmatrix.com>

	* OpenSSL/SSL.py: Add Cory Benfield's next-protocol-negotiation
	  (NPN) bindings.

2015-03-15  Jean-Paul Calderone  <exarkun@twistedmatrix.com>

	* OpenSSL/SSL.py: Add ``Connection.recv_into``, mirroring the
	  builtin ``socket.recv_into``.  Based on work from Cory Benfield.
	* OpenSSL/test/test_ssl.py: Add tests for ``recv_into``.

2015-01-30  Stephen Holsapple <sholsapp@gmail.com>

	* OpenSSL/crypto.py: Expose ``X509StoreContext`` for verifying certificates.
	* OpenSSL/test/test_crypto.py: Add intermediate certificates for

2015-01-08  Paul Aurich <paul@darkrain42.org>

	* OpenSSL/SSL.py: ``Connection.shutdown`` now propagates errors from the
	  underlying socket.
